--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ node_modules
 dist
 dist-ssr
 *.local
+public/scss
 
 # Editor directories and files
 .vscode/*
@@ -24,5 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
 *.json
